--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,14 +1,10 @@
-
-app: 
-  datasource: 
-    jdbcUrl: jdbc:h2:~/extracts-webservice;AUTO_SERVER=TRUE
-    username: sa
-    password: 
-
-server: 
-  port: 8090
-
-chainrpc: 
+spring:
+  profiles:
+    active: "aws"
+---
+spring:
+  profiles: dev
+chainrpc:
   host: localhost
   port: 2910
   chainName: registryv3
@@ -18,10 +14,24 @@ chainrpc:
   multichainCli: /home/jboss/extracts-poc/multichain-1.0-beta-1/multichain-cli
   multichainD: /home/jboss/extracts-poc/multichain-1.0-beta-1/multichaind
   multichainUtil: /home/jboss/extracts-poc/multichain-1.0-beta-1/multichain-util
-  publicKey : 16SwYKazYw2sonfFmFSEQCfyoc6b6Gsjeo5VGY
-
-remote: 
-  datasource: 
-    jdbcUrl: jdbc:oracle:thin:@192.168.32.51:1521:xe
-    username: CSD
-    password: CSD
+  publicKey[0] : 16SwYKazYw2sonfFmFSEQCfyoc6b6Gsjeo5VGY
+  publicKey[1] : 1TKNkCAnzfb1AmQDQ9KTKmUAWnRNLH26h7ZERs
+server: 
+  port: 8090
+---
+spring:
+  profiles: aws
+chainrpc:
+  host: localhost
+  port: 4358
+  chainName: registryv3
+  username: multichainrpc
+  password: 5tr7nvp6AwrubikMwgwNYvRNsBBU3hGVjCFie7Wxrn5F
+  mode: REGISTER
+  multichainCli: /home/jboss/extracts-poc/multichain-1.0-beta-1/multichain-cli
+  multichainD: /home/jboss/extracts-poc/multichain-1.0-beta-1/multichaind
+  multichainUtil: /home/jboss/extracts-poc/multichain-1.0-beta-1/multichain-util
+  publicKey[0] : 1ThRZzL3i4Zc96japNbDWA3sxGUxnWCKgfq1so
+  publicKey[1] : 1PysmGFApqSXvnKTuiQ2F3bYcKp1ziTPnZzLRs
+server:
+  port: 8090
